--- a/TAF.Web/Web.config
+++ b/TAF.Web/Web.config
@@ -156,5 +156,12 @@
       <mimeMap fileExtension=".woff" mimeType="application/font-woff" />
       <mimeMap fileExtension=".woff2" mimeType="application/font-woff" />
     </staticContent>
+    <security>
+      <requestFiltering>
+        <hiddenSegments>
+          <remove segment="App_Data"/>
+        </hiddenSegments>
+      </requestFiltering>
+    </security>
   </system.webServer>
 </configuration>
