--- a/TAF.Core/SCBF.Core.csproj
+++ b/TAF.Core/SCBF.Core.csproj
@@ -158,6 +158,11 @@
     <Compile Include="Finance\Outlay.cs" />
     <Compile Include="Finance\VoucherAudit.cs" />
     <Compile Include="Finance\VoucherAuditPoint.cs" />
+    <Compile Include="Purchase\BiddingManagement.cs" />
+    <Compile Include="Purchase\BiddingType.cs" />
+    <Compile Include="Purchase\CostList.cs" />
+    <Compile Include="Purchase\IBiddingManagementRepository.cs" />
+    <Compile Include="Purchase\ICostListRepository.cs" />
     <Compile Include="Purchase\IProcessManagementRepository.cs" />
     <Compile Include="Purchase\IStageInfoActualOutlayRepository.cs" />
     <Compile Include="Purchase\IStageInfoBudgetOutlayRepository.cs" />
@@ -170,6 +175,7 @@
     <Compile Include="Purchase\ProcurementPlan.cs" />
     <Compile Include="Purchase\ProcurementPlanCategory.cs" />
     <Compile Include="Purchase\ProcurementPlanMode.cs" />
+    <Compile Include="Purchase\PurchaseTypeInfo.cs" />
     <Compile Include="Purchase\RelationshipType.cs" />
     <Compile Include="Purchase\StageCategory.cs" />
     <Compile Include="Purchase\StageInfo.cs" />
