--- a/TAF.Web/SCBF.Web.csproj
+++ b/TAF.Web/SCBF.Web.csproj
@@ -821,6 +821,7 @@
     <Content Include="Views\Account\login.js" />
     <Content Include="Views\Account\user.js" />
     <Content Include="Views\ActualOutlay\actualOutlay.js" />
+    <Content Include="Views\BiddingManagement\biddingManagement.js" />
     <Content Include="Views\CarOil\carOilReport.js" />
     <Content Include="Views\CarOil\carOil.js" />
     <Content Include="Views\InvoiceCheck\invoiceCheck.js" />
@@ -963,6 +964,7 @@
     <Compile Include="Controllers\ApplicationForBunkerBController.cs" />
     <Compile Include="Controllers\ApplicationForBunkerAController.cs" />
     <Compile Include="Controllers\ApplyForVehicleMaintenanceController.cs" />
+    <Compile Include="Controllers\BiddingManagementController.cs" />
     <Compile Include="Controllers\BudgetOutlayController.cs" />
     <Compile Include="Controllers\BudgetReceiptController.cs" />
     <Compile Include="Controllers\CarController.cs" />
@@ -1098,6 +1100,7 @@
     <Content Include="Views\ProcessManagement\_CostManage.cshtml" />
     <Content Include="Views\ProcessManagement\_SupervisionManage.cshtml" />
     <Content Include="Views\ProcessManagement\_RepresentativesManage.cshtml" />
+    <Content Include="Views\BiddingManagement\_BiddingManagementIndex.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
