--- a/TAF.Application/SCBF.Application.csproj
+++ b/TAF.Application/SCBF.Application.csproj
@@ -222,10 +222,14 @@
     <Compile Include="Finance\IVoucherAuditAppService.cs" />
     <Compile Include="Finance\VoucherAuditAppService.cs" />
     <Compile Include="Purchase\BiddingManagementAppService.cs" />
+    <Compile Include="Purchase\BidOpeningManagementAppService.cs" />
     <Compile Include="Purchase\CostListAppService.cs" />
     <Compile Include="Purchase\Dto\BiddingManagementEditDto.cs" />
     <Compile Include="Purchase\Dto\BiddingManagementListDto.cs" />
     <Compile Include="Purchase\Dto\BiddingManagementQueryDto.cs" />
+    <Compile Include="Purchase\Dto\BidOpeningManagementEditDto.cs" />
+    <Compile Include="Purchase\Dto\BidOpeningManagementListDto.cs" />
+    <Compile Include="Purchase\Dto\BidOpeningManagementQueryDto.cs" />
     <Compile Include="Purchase\Dto\BudgetOutlaySummaryDto.cs" />
     <Compile Include="Purchase\Dto\CostListDto.cs" />
     <Compile Include="Purchase\Dto\PlanWithBudgetOutlayEditDto.cs" />
@@ -243,6 +247,7 @@
     <Compile Include="Purchase\Dto\StageInfoQueryDto.cs" />
     <Compile Include="Purchase\Dto\TendererDto.cs" />
     <Compile Include="Purchase\IBiddingManagementAppService.cs" />
+    <Compile Include="Purchase\IBidOpeningManagementAppService.cs" />
     <Compile Include="Purchase\ICostListAppService.cs" />
     <Compile Include="Purchase\IPlanWithBudgetOutlayAppService.cs" />
     <Compile Include="Purchase\IProcessManagementAppService.cs" />
