--- a/TAF.Core/packages.config
+++ b/TAF.Core/packages.config
@@ -13,7 +13,9 @@
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net46" />
   <package id="Nito.AsyncEx" version="4.0.1" targetFramework="net46" />
+  <package id="sharpconfig" version="1.5.6" targetFramework="net46" />
   <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net46" />
   <package id="System.Linq.Dynamic" version="1.0.7" targetFramework="net46" />
   <package id="System.Linq.Dynamic.Core" version="1.0.6.13" targetFramework="net46" />
+  <package id="TAF.Utility" version="1.0.0.8" targetFramework="net46" />
 </packages>
